<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="apk_name">Myges</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginText">Login</string>
    <string name="memo">Mémoriser</string>
    <string name="pagelogin">Connexion a un compte Myges</string>
    <string name="buttonConnexion">Connexion</string>
    <string name="passwordText">Mot de passe</string>
    <string name="desc"></string>
    
    <string name="app_name">Navigation</string>

    <string-array name="Menu">
        <item>Mon Profil</item>
        <item>Accueil</item>
        <item>Scolarité</item>
        <item>Mes Services</item>
        <item>Contacts</item>
        <item>Aide</item>
        <item>Webmail</item>
    </string-array>
    
     <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="none"></string>
    <string name="directionEsgi">Direction Esgi</string>
    <string name="director">Emmanuel Peter - Directeur ESGI</string>
    <string name="call">Appeler</string>
    <string name="mail">Mail</string>
    
    <string name="ServicePedagogique">Service Pedagogique</string>
    <string name="CarolineP">Caroline Platon - Coordinatrice Pédagogique et attachée de Promotion 1i et 2i</string>
    <string name="StephanieP">Stephanie Petit - Attachée de promotion AL, IJV, IAM</string>
    <string name="MaylisL">Maÿlis LAFONT - Attachée de promotion SRC, SI</string>
    <string name="LucileM">Lucile MOREAU - Attachée de promotion DW/WEB, MCSI</string>
    <string name="ArnaudP">Arnaud Perche - Chargé des admissions</string>
    <string name="DanielL">Daniel LEMOINE - Chargé des Relations Entreprises 1ère,2ème et 3ème année</string>
    <string name="AurelienM">Aurélien MARTIN - Chargé des Relations Entreprises SRC et SI</string>
    <string name="MayssaE">Maÿssa ELHORR - Chargé des Relations Entreprises WEB et MCSI</string>
    
    <string name="ServiceAdmissions">Services Admissions</string>
    <string name="ServiceRelation">Service relation entreprise</string>
    
    

</resources>